[package]
authors = ["Ronen Ulanovsky <ronen.ulanovsky.5@gmail.com>"]
categories = ["network-programming", "no-std", "parser-implementations"]
description = "A no_std zero-copy parser/codec for the STUN (RFC 8489) protocol."
documentation = "https://docs.rs/stunparse"
edition = "2021"
keywords = ["stun", "ice", "turn", "codec", "parser"]
license = "MIT/Apache-2.0"
name = "stunparse"
readme = "README.md"
repository = "https://github.com/zRedShift/stunparse"
version = "0.0.1"

[dependencies]
