[package]
authors = ["Ronen Ulanovsky <ronen.ulanovsky.5@gmail.com>"]
categories = ["network-programming", "no-std", "parser-implementations"]
description = "A no_std zero-copy parser/codec for the STUN (RFC 8489) protocol."
documentation = "https://docs.rs/stunparse"
edition = "2021"
keywords = ["stun", "ice", "turn", "codec", "parser"]
license = "MIT/Apache-2.0"
name = "stunparse"
readme = "README.md"
repository = "https://github.com/zRedShift/stunparse"
version = "0.1.0"

[dependencies]
cfg-if = "1.0.0"
heapless = { version = "0.8.0", optional = true }
inline_dyn = "0.2.1"
no-std-net = { version = "0.6.0", optional = true }

[features]
default = ["std"]

alloc = []
error_in_core = []
ip_in_core = []
nightly = [
  "ip_in_core",
  "error_in_core",
  "type_alias_impl_trait",
  "inline_dyn/nightly",
]
std = ["alloc", "no-std-net?/std", "inline_dyn/std"]
type_alias_impl_trait = []
